@@ -1,0 +1,8 @@
+#include "diffiehellman"
+
+#include <bobcat/exception>
+#include <bobcat/mstream>
+#include <bobcat/bigint>
+
+using namespace std;
+using namespace FBB;
