@@ -1,0 +1,11 @@
+#include <iostream>
+
+int main()
+try
+{
+    FBB::DiffieHellman dh;
+}
+catch (std::exception const &exc)
+{
+    std::cout << exc.what() << '\n';
+}
