@@ -1,0 +1,5 @@
+#include "diffiehellman.ih"
+
+DiffieHellman::
+{
+}
