@@ -78,9 +78,9 @@ manpagesection(CONSTRUCTORS)
     itemization(
     itb(BigInt())
         The default constructor initializes a tt(BigInt) value to 0.
-    itb(BigInt(BIGNUM const &value))
+    itb(explicit BigInt(BIGNUM const &value))
         This constructor initializes a tt(BigInt) from a tt(BIGNUM). 
-    itb(BigInt(BIGNUM const *value))
+    itb(explicit BigInt(BIGNUM const *value))
         This constructor initializes a tt(BigInt) from a pointer to a 
         tt(const BIGNUM).
     itb(BigInt(Type value))
