@@ -14,7 +14,8 @@ bobcat (3.15.00)
   * Added class IBase64Stream, using a IBase64Streambuf for its
     std::streambuf. 
 
-
+  * Added class DiffieHellman, implementing Diffie-Hellman shared secret
+    computations 
 
 
 bobcat (3.14.00)
